<!-- settings_fragment.xml-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/space_medium">

    <!-- Begin date -->
    <TextView
        android:id="@+id/settings_fragment_begin_date_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:text="@string/begin_date"
        android:textSize="@dimen/text_small"/>

    <TextView
        android:id="@+id/settings_fragment_begin_date_edit_text_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_fragment_begin_date_text_view_id"
        android:layout_marginTop="@dimen/space_small"

        android:padding="2dp"
        android:background="@drawable/round_background"
        android:textSize="@dimen/text_medium_small"
        android:textColor="@android:color/black"
        android:gravity="center_vertical"/>

    <!-- Sort Order -->
    <TextView
        android:id="@+id/settings_fragment_sort_order_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_fragment_begin_date_edit_text_id"
        android:layout_marginTop="@dimen/space_medium"

        android:text="@string/sort_order"
        android:textSize="@dimen/text_small"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/settings_fragment_spinner_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/settings_fragment_sort_order_text_view_id"
        android:layout_marginTop="@dimen/space_small"

        android:padding="2dp"
        android:textSize="@dimen/text_medium_small"
        android:background="@drawable/round_background" />

    <!-- News Desk Values -->
    <TextView
        android:id="@+id/settings_fragment_news_desk_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_fragment_spinner_id"
        android:layout_marginTop="@dimen/space_medium"

        android:text="@string/news_desk_values"
        android:textSize="@dimen/text_small"/>

    <CheckBox
        android:id="@+id/settings_fragment_arts_check_box_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_fragment_news_desk_text_view_id"

        android:text="@string/news_desk_values_arts"/>

    <CheckBox
        android:id="@+id/settings_fragment_fashion_check_box_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_fragment_arts_check_box_id"

        android:text="@string/news_desk_values_fashion"/>

    <CheckBox
        android:id="@+id/settings_fragment_sports_check_box_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_fragment_fashion_check_box_id"

        android:text="@string/news_desk_values_sports"/>

    <Button
        android:id="@+id/settings_fragment_save_button_id"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/settings_fragment_sports_check_box_id"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"

        android:text="@string/save"
        android:background="@drawable/round_background"/>

</RelativeLayout>